common/applications/frigate/extensions/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate
  annotations:
    external-dns.alpha.kubernetes.io/provider: public
    external-dns.alpha.kubernetes.io/target: "${PUBLIC_IP}"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`nvr-auth.${LOCAL_HOME_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frigate-auth-proxy
          namespace: ${APPLICATION_NAMESPACE}
      services:
        - name: frigate-frigate-http
          port: 8971
    - match: Host(`nvr-auth.${LOCAL_HOME_DOMAIN}`) && PathPrefix(`/oauth2/`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 80
  tls:
    secretName: frigate-auth-tls-cert
